Making pattern matching in instanceof final.