@@ -25,8 +25,8 @@
  * @test
  * @bug 8231827
  * @summary Pattern variables can be effectivelly final so should be allowed to be referenced in an inner class
- * @compile --enable-preview -source ${jdk.version} PatternVariablesAreNonFinal2.java
- * @run main/othervm --enable-preview PatternVariablesAreNonFinal2
+ * @compile PatternVariablesAreNonFinal2.java
+ * @run main PatternVariablesAreNonFinal2
  */
 public class PatternVariablesAreNonFinal2 {
     public static void main(String[] args) {
